Partial OPTIONS button implementation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "TI4.sln"
+    "dotnet.defaultSolution": "theSunkenCurse.sln"
 }
